# shortcut-summarizer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
shortcut-summarizer/domain/: models.py
shortcut-summarizer/ports/: report.py  summarizer.py  ticket.py
shortcut-summarizer/ports/repository/: notion.py  shortcut.py
shortcut-summarizer/services/: fetch_ticket.py  models.py  report_builder.py
shortcut_summarizer/: main.py
shortcut_summarizer/domains/: models.py
shortcut_summarizer/ports/: report.py  summarizer.py  ticket.py
shortcut_summarizer/ports/repository/: notion.py  shortcut.py
shortcut_summarizer/services/: fetch_ticket.py  models.py  publish_report.py  summarize_report.py
src/: main.py
src/accessor/: shortcut.py
src/model/: models.py
src/shortcut_summarizer/: main.py  settings.py  utils.py
src/shortcut_summarizer/adapters/: local_agent.py
src/shortcut_summarizer/domains/: common.py  report.py  ticket.py
src/shortcut_summarizer/infrastructure/: http_client.py
src/shortcut_summarizer/ports/: report.py  summarizer.py  ticket.py
src/shortcut_summarizer/ports/repository/: notion.py  shortcut.py
src/shortcut_summarizer/repository/: notion.py  shortcut.py
src/shortcut_summarizer/services/: _models.py  fetch_ticket.py  publish_report.py  summarize_report.py
src/tests/adapters/: test_local_agent.py
src/tests/ports/repository/: test_shortcut.py
src/tests/repository/: test_notion.py  test_shortcut.py
src/tests/services/: test_fetch_ticket.py
tests/accessor/: shortcut.py
tests/ports/adapters/: shortcut.py
