[tool.poetry]
name = "shortcut-summarizer"
version = "0.1.0"
description = ""
authors = ["RxSaml"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
streamable = "^1.4.7"
notion-client = "^2.3.0"

torch =   [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.6.0-cp312-none-macosx_11_0_arm64.whl", markers = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
    { version = "^2.6", markers = "platform_system == 'linux'", source="pytorch-cpu" }
]
types-requests = "^2.32.0.20241016"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
pylint = "^3.3.3"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
black = "^24.10.0"
flake8-black = "^0.3.6"
pytest = "^8.3.4"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]
