[tool.poetry]
name = "shortcut-summarizer"
version = "0.1.0"
description = ""
authors = ["RxSaml"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
streamable = "^1.4.7"
notion-client = "^2.3.0"
types-requests = "^2.32.0.20241016"
transformers = "^4.48.3"
sentencepiece = "^0.2.0"
torch = "^2.6.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
pylint = "^3.3.3"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
black = "^24.10.0"
flake8-black = "^0.3.6"
pytest = "^8.3.4"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
